# GroukProject

./: .gitignore  CMakeLists.txt  README.md
cmake/: Config.cmake  Macros.cmake  SFMLVariable.cmake
include/: Bidon.hpp
src/: Bidon.cpp  CMakeLists.txt  main.cpp
